--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
             <li class="nav_links"><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <div class="container head_container">
+        <h1>Hey There. I’m Luca</h1>
+        <h4>I’am a Software Developer</h4>
+        <p>
+            I can help you build a product , feature or website Look through some of
+            my work and experience! If you like what you see and have a project you
+            need coded, don’t hestiate to contact me.
+        </p>
+        <ul class="contact_links">
+            <li class="links"><i class="fa-brands fa-github"></i></li>
+            <li class="links"><i class="fa-brands fa-linkedin"></i></li>
+            <li class="links"><i class="fa-brands fa-twitter"></i></li>
+            <li class="links"><i class="fa-brands fa-whatsapp"></i></li>
+        </ul>
+    </div>
 </body>
 
 </html>
