All the requirements have been done

--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <ul>
-            <li class="nav_logo">Luca Benavente</li>
-            <li class="nav_toggle"><i class="fas fa-bars"></i></li>
-            <li class="nav_links"><a href="#">Portfolio</a></li>
-            <li class="nav_links"><a href="#">About</a></li>
-            <li class="nav_links"><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="container head_container">
+    <header class="navbar">
+        <nav class="nav_logo1">
+
+            <a class="nav_logo" href="./index.html">Luca Benavente</a>
+        </nav>
+
+        <nav class="navbar1">
+            <a class="nav_toggle"><i class="fas fa-bars"></i></a>
+        </nav>
+    </header>
+    <section class="container head_container">
         <h1>Hey There. I’m Luca</h1>
-        <h4>I’am a Software Developer</h4>
+        <h4> I’am a Software Developer</h4>
         <p>
             I can help you build a product , feature or website Look through some of
             my work and experience! If you like what you see and have a project you
@@ -39,7 +40,7 @@
             <li class="links"><i class="fa-brands fa-twitter"></i></li>
             <li class="links"><i class="fa-brands fa-whatsapp"></i></li>
         </ul>
-    </div>
+    </section>
 </body>
 
 </html>
