All the requirements have been done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
     <script src="https://kit.fontawesome.com/8bb8430e5d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <section class="container head_container">
-        <h1>Hey There. I’m Luca</h1>
+        <h1 class="text1">Hey There. <br> I’m Luca</h1>
         <h4> I’am a Software Developer</h4>
         <p>
             I can help you build a product , feature or website Look through some of
@@ -35,10 +35,11 @@
             need coded, don’t hestiate to contact me.
         </p>
         <ul class="contact_links">
-            <li class="links"><i class="fa-brands fa-github"></i></li>
-            <li class="links"><i class="fa-brands fa-linkedin"></i></li>
-            <li class="links"><i class="fa-brands fa-twitter"></i></li>
-            <li class="links"><i class="fa-brands fa-whatsapp"></i></li>
+            <li class="github_logo"><a href="#"><img src="./images/Vectorgithubcat.svg" alt=""></a></li>
+            <li><a href="#"><img src="./images/Disabledin.svg" alt=""></a></li>
+            <li><a href="#"><img src="./images/Enabledhand.svg" alt=""></a></li>
+            <li><a href="#"><img src="./images/Disabledtwitter.svg" alt=""></a></li>
+            <li><a href="#"><img src="./images/Disabledm.svg" alt=""></a></li>
         </ul>
     </section>
 </body>
