--- a/index.html
+++ b/index.html
@@ -42,6 +42,202 @@
             <li><a href="#"><img src="./images/Disabledm.svg" alt=""></a></li>
         </ul>
     </section>
+    <section class="jobs_container">
+        <h1>My Recent Works</h1>
+        <hr>
+        <section class="card">
+            <img src="./images/Img Placeholder.png" alt="">
+            <h2>Multi-Post Stories</h2>
+            <p>
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+            <div class="skills">
+                <ul>
+                    <li>css</li>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project1" href="#">See Project</a>
+        </section>
+
+        <br>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+        <section class="card1">
+            <h2>Profesional Art Printing Data</h2>
+            <p class="jobs_p">
+                A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
+                industry's standard
+            </p>
+            <div class="skills1">
+                <ul>
+                    <li>html</li>
+                    <li>javascript</li>
+                    <li>ruby</li>
+                </ul>
+            </div>
+            <a class="see_project2" href="#">See Project</a>
+        </section>
+
+    </section>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <section class="container about_container">
+        <h1 class="text1">About Me</h1>
+        <p>
+            Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
+            work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact
+            me.
+        </p>
+        <a class="see_project3" href="#">Get My Resume</a>
+    </section>
+  
+    <section class="about_container1">
+        <br>
+        <br>
+        <hr>
+        <br>
+        <br>
+        <div class="language_container">
+            <h2>
+                Language
+            </h2>
+            <br>
+            <p>Javascript</p>
+            <br>
+            <p>Ruby</p>
+            <br>
+            <p>Html</p>
+            <br>
+            <p>Css</p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="frameworks_container">
+            <h2>
+                Frameworks
+            </h2>
+            <br>
+            <p>Bootstrap</p>
+            <br>
+            <p>Ruby on Rails</p>
+            <br>
+            <p>RSPec</p>
+            <br>
+            <p>CapyBara</p>
+            <br>
+            <p>Selenium</p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="skills_container">
+            <h2>
+               Skills
+            </h2>
+            <br>
+            <p>Codekit</p>
+            <br>
+            <p>Github</p>
+            <br>
+            <p>Codepen</p>
+            <br>
+            <p>Gitlab</p>
+            <br>
+            <p>Terminal</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
