All the requirements have been done

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>My Recent Works</h1>
         <hr>
         <section class="card">
-            <img src="./images/Img Placeholder.png" alt="">
+            <img src="./images/Placeholder.png" alt="">
             <h2>Multi-Post Stories</h2>
             <p>
                 A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
