Updated index.html file

--- a/index.html
+++ b/index.html
@@ -211,6 +211,26 @@
             </ul>
         </div>
     </section>
+    <section class="form_section">
+        <div class="form_text">
+          <h2>
+            I'm always interested in hearing about new projects, so if you'd
+            like to chat please get in touch.
+          </h2>
+        </div>
+        <form action="https://formspree.io/f/mleznykr" method="POST" class="form">
+          <div class="form_list">
+                <input class="form_input form_name form_firs_name" type="text" placeholder="First name" name="user_name" required maxlength="30" />
+                <input class="form_input form_name form_last_name" type="text" placeholder="Last name" name="user_last_name" required
+                    maxlength="30" />
+                <input class="form_input form_email" type="email" placeholder="Email address" name="user_email" required />
+                <textarea class="form_msg" name="user_message" placeholder="Enter your message here" required maxlength="500"></textarea>
+                <div class="form_btn">
+                <button type="submit" class="btn_reg">Get in touch</button>
+                </div>
+          </div>
+        </form>
+      </section>
 </body>
 
 </html>
