redesign form section of mobile version

--- a/index.html
+++ b/index.html
@@ -220,10 +220,12 @@
         </div>
         <form action="https://formspree.io/f/mleznykr" method="POST" class="form">
             <div class="form_list">
-                <input class="form_input form_name form_firs_name" type="text" placeholder="First name" name="user_name"
+                <input class="form_input form_name form_firs_name desktop" type="text" placeholder="First name" name="user_name"
                     required maxlength="30" />
-                <input class="form_input form_name form_last_name" type="text" placeholder="Last name"
+                <input class="form_input form_name form_last_name desktop" type="text" placeholder="Last name"
                     name="user_last_name" required maxlength="30" />
+                <input class="form_input form_name form_full_name mobile" type="text" placeholder="Full name"
+                    name="user_last_name" required maxlength="60" />   
                 <input class="form_input form_email" type="email" placeholder="Email address" name="user_email"
                     required />
                 <textarea class="form_msg" name="user_message" placeholder="Enter your message here" required
