--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="grid.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="grid.css" />
     <script src="https://kit.fontawesome.com/8bb8430e5d.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
@@ -19,7 +19,9 @@
                 <li><a href="#" class="nav_link">Portfolio</a></li>
                 <li><a href="#" class="nav_link">About</a></li>
                 <li><a href="#" class="nav_link">Contact</a></li>
-                <li><a href="#" class="envelope_logo nav_link"><i class="fa-solid fa-envelope"></i></a></li>
+                <li>
+                    <a href="#" class="envelope_logo nav_link"><i class="fa-solid fa-envelope"></i></a>
+                </li>
             </ul>
             <a href="#" class="toggle_btn"><i class="fa fa-bars"></i></a>
         </nav>
@@ -27,38 +29,51 @@
     <section class="intro_container">
         <div class="socialmedia_icons">
             <ul class="icons">
-                <li><a href="#"><img src="./img/svg/github.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/svg/linkedin.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/svg/peace.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/svg/twitter.svg" alt=""></a></li>
-                <li><a href="#"><img src="./img/svg/M.svg" alt=""></a></li>
+                <li>
+                    <a href="#"><img src="./img/svg/github.svg" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/svg/linkedin.svg" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/svg/peace.svg" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/svg/twitter.svg" alt="" /></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./img/svg/M.svg" alt="" /></a>
+                </li>
             </ul>
         </div>
         <div class="text1">
-            <h1>Hey There. <br> I’m Luca</h1>
+            <h1>
+                Hey There. <br />
+                I’m Luca
+            </h1>
             <h4>I’am a Software Developer</h4>
-            <p>I can help you build a product , feature or website
-                Look through some of my work and experience! If you like
-                what you see and have a project you need coded,
-                don’t hestiate to contact me.
+            <p>
+                I can help you build a product , feature or website Look through some
+                of my work and experience! If you like what you see and have a project
+                you need coded, don’t hestiate to contact me.
             </p>
         </div>
     </section>
     <section class="mrw_line">
         <h4>My Recent Works</h4>
         <div class="line">
-            <hr>
+            <hr />
         </div>
     </section>
     <section class="recent_works_container">
         <div class="multi_post_stories">
-            <div class="mps_img"><img src="./img/bg/Placeholder.png" alt=""></div>
+            <div class="mps_img"><img src="./img/bg/Placeholder.png" alt="" /></div>
             <div class="mps_text">
                 <h4>Multi-Post Stories</h4>
                 <p>
-                    A daily selection of privately personalized reads; no accounts or sign-ups required. has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy
-                    text.
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required. has been the industry's standard dummy text ever
+                    since the 1500s, when an unknown printer took a standard dummy text.
                 </p>
                 <ul class="skills_container">
                     <li>css</li>
@@ -74,8 +89,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -88,8 +103,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -102,8 +117,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -116,8 +131,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -130,8 +145,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -144,8 +159,8 @@
                 <div class="mps_text1">
                     <h4>Multi-Post Stories</h4>
                     <p>
-                        A daily selection of privately personalized reads; no accounts or sign-ups required. has been
-                        the industry's standard.
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
                     </p>
                     <ul class="skills_container1">
                         <li>html</li>
@@ -160,8 +175,9 @@
         <div class="mps_text">
             <h4>About me</h4>
             <p>
-                Hello I’m a software developer! I can help you build a product , feature or website Look through some of
-                my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
+                Hello I’m a software developer! I can help you build a product ,
+                feature or website Look through some of my work and experience! If you
+                like what you see and have a project you need coded, don’t hestiate to
                 contact me.
             </p>
             <button>Get My Resume</button>
@@ -169,7 +185,7 @@
     </section>
     <section class="skills2_container">
         <div class="line">
-            <hr>
+            <hr />
         </div>
         <div class="lang_container">
             <div class="text_deco">
@@ -214,18 +230,18 @@
     <section class="form_section">
         <div class="form_text">
             <h2>
-                I'm always interested in hearing about new projects, so if you'd
-                like to chat please get in touch.
+                I'm always interested in hearing about new projects, so if you'd like
+                to chat please get in touch.
             </h2>
         </div>
         <form action="https://formspree.io/f/mleznykr" method="POST" class="form">
             <div class="form_list">
-                <input class="form_input form_name form_firs_name desktop" type="text" placeholder="First name" name="user_name"
-                    required maxlength="30" />
+                <input class="form_input form_name form_first_name desktop" type="text" placeholder="First name"
+                    name="user_name" required maxlength="30" />
                 <input class="form_input form_name form_last_name desktop" type="text" placeholder="Last name"
                     name="user_last_name" required maxlength="30" />
                 <input class="form_input form_name form_full_name mobile" type="text" placeholder="Full name"
-                    name="user_last_name" required maxlength="60" />   
+                    name="user_last_name" required maxlength="60" />
                 <input class="form_input form_email" type="email" placeholder="Email address" name="user_email"
                     required />
                 <textarea class="form_msg" name="user_message" placeholder="Enter your message here" required
@@ -236,6 +252,26 @@
             </div>
         </form>
     </section>
+    <footer>
+        <ul class="icons_footer">
+            <li>
+                <a href="#"><img src="./img/svg/github.svg" alt="" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="./img/svg/linkedin.svg" alt="" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="./img/svg/peace.svg" alt="" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="./img/svg/twitter.svg" alt="" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="./img/svg/M.svg" alt="" /></a>
+            </li>
+        </ul>
+        <div class="last_line"></div>
+    </footer>
 </body>
 
 </html>
