--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                         <li>Ruby</li>
                     </ul>
                 </div>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn" type="button">See Project</button>
+                </div>
             </div>
             <div class="works_card">
                 <div class="mps_text1">
@@ -236,10 +239,10 @@
         </div>
         <form action="https://formspree.io/f/mleznykr" method="POST" class="form">
             <div class="form_list">
-                <input class="form_input form_name form_first_name desktop" type="text" placeholder="First name"
+                <!-- <input class="form_input form_name form_first_name desktop" type="text" placeholder="First name"
                     name="user_name" required maxlength="30" />
                 <input class="form_input form_name form_last_name desktop" type="text" placeholder="Last name"
-                    name="user_last_name" required maxlength="30" />
+                    name="user_last_name" required maxlength="30" /> -->
                 <input class="form_input form_name form_full_name mobile" type="text" placeholder="Full name"
                     name="user_last_name" required maxlength="60" />
                 <input class="form_input form_email" type="email" placeholder="Email address" name="user_email"
@@ -255,19 +258,19 @@
     <footer>
         <ul class="icons_footer">
             <li>
-                <a href="#"><img src="./img/svg/github.svg" alt="" /></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
             </li>
             <li>
-                <a href="#"><img src="./img/svg/linkedin.svg" alt="" /></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
             <li>
-                <a href="#"><img src="./img/svg/peace.svg" alt="" /></a>
+                <a href="#"><i class="fa-solid fa-hand-peace"></i></a>
             </li>
             <li>
-                <a href="#"><img src="./img/svg/twitter.svg" alt="" /></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
             </li>
             <li>
-                <a href="#"><img src="./img/svg/M.svg" alt="" /></a>
+                <a href="#"><i class="fa-solid fa-m"></i></a>
             </li>
         </ul>
         <div class="last_line"></div>
