--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn" type="button">See Project</button>
+                    <button class="sp_btn">See Project</button>
                 </div>
             </div>
             <div class="works_card">
@@ -115,19 +115,8 @@
                         <li>Ruby</li>
                     </ul>
                 </div>
-            </div>
-            <div class="works_card">
-                <div class="mps_text1">
-                    <h4>Multi-Post Stories</h4>
-                    <p>
-                        A daily selection of privately personalized reads; no accounts or
-                        sign-ups required. has been the industry's standard.
-                    </p>
-                    <ul class="skills_container1">
-                        <li>html</li>
-                        <li>bootstrap</li>
-                        <li>Ruby</li>
-                    </ul>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn">See Project</button>
                 </div>
             </div>
             <div class="works_card">
@@ -143,19 +132,8 @@
                         <li>Ruby</li>
                     </ul>
                 </div>
-            </div>
-            <div class="works_card">
-                <div class="mps_text1">
-                    <h4>Multi-Post Stories</h4>
-                    <p>
-                        A daily selection of privately personalized reads; no accounts or
-                        sign-ups required. has been the industry's standard.
-                    </p>
-                    <ul class="skills_container1">
-                        <li>html</li>
-                        <li>bootstrap</li>
-                        <li>Ruby</li>
-                    </ul>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn">See Project</button>
                 </div>
             </div>
             <div class="works_card">
@@ -170,6 +148,43 @@
                         <li>bootstrap</li>
                         <li>Ruby</li>
                     </ul>
+                </div>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn">See Project</button>
+                </div>
+            </div>
+            <div class="works_card">
+                <div class="mps_text1">
+                    <h4>Multi-Post Stories</h4>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
+                    </p>
+                    <ul class="skills_container1">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>Ruby</li>
+                    </ul>
+                </div>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn">See Project</button>
+                </div>
+            </div>
+            <div class="works_card">
+                <div class="mps_text1">
+                    <h4>Multi-Post Stories</h4>
+                    <p>
+                        A daily selection of privately personalized reads; no accounts or
+                        sign-ups required. has been the industry's standard.
+                    </p>
+                    <ul class="skills_container1">
+                        <li>html</li>
+                        <li>bootstrap</li>
+                        <li>Ruby</li>
+                    </ul>
+                </div>
+                <div class="works_card_hover_see">
+                    <button class="sp_btn">See Project</button>
                 </div>
             </div>
         </div>
