--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -116,7 +116,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -133,7 +133,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -150,7 +150,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -167,7 +167,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -184,7 +184,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn">See Project</button>
+                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
         </div>
