--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li>bootstrap</li>
                     <li>Ruby</li>
                 </ul>
-                <button>See Project</button>
+                <button type="button">See Project</button>
             </div>
         </div>
         <div class="works_grid">
@@ -99,7 +99,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </button>
                 </div>
             </div>
             <div class="works_card">
@@ -116,7 +118,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
