--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -152,7 +152,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -169,7 +169,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
             <div class="works_card">
@@ -186,7 +186,7 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
                 </div>
             </div>
         </div>
