Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 like what you see and have a project you need coded, don’t hestiate to
                 contact me.
             </p>
-            <button>Get My Resume</button>
+            <button type="button">Get My Resume</button>
         </div>
     </section>
     <section class="skills2_container">
@@ -256,10 +256,6 @@
         </div>
         <form action="https://formspree.io/f/mleznykr" method="POST" class="form">
             <div class="form_list">
-                <!-- <input class="form_input form_name form_first_name desktop" type="text" placeholder="First name"
-                    name="user_name" required maxlength="30" />
-                <input class="form_input form_name form_last_name desktop" type="text" placeholder="Last name"
-                    name="user_last_name" required maxlength="30" /> -->
                 <input class="form_input form_name form_full_name mobile" type="text" placeholder="Full name"
                     name="user_last_name" required maxlength="60" />
                 <input class="form_input form_email" type="email" placeholder="Email address" name="user_email"
