Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn">
+                    <div class="sp_btn">
                         <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
-                    </button>
+                    </div>
                 </div>
             </div>
             <div class="works_card">
@@ -118,7 +118,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <div class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="works_card">
@@ -135,7 +137,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <div class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="works_card">
@@ -152,7 +156,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <div class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="works_card">
@@ -169,7 +175,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <div class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </div>
                 </div>
             </div>
             <div class="works_card">
@@ -186,7 +194,9 @@
                     </ul>
                 </div>
                 <div class="works_card_hover_see">
-                    <button type="button" class="sp_btn"><a href="https://github.com/lucabenaventew/Portfolio">See Project</a></button>
+                    <div class="sp_btn">
+                        <a href="https://github.com/lucabenaventew/Portfolio">See Project</a>
+                    </div>
                 </div>
             </div>
         </div>
