--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@
         </form>
     </section>
     <footer>
+        <div class="line2">
+            <hr />
+        </div>
         <ul class="icons_footer">
             <li>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
