--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="grid.css" />
     <script src="https://kit.fontawesome.com/8bb8430e5d.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Luca's Portfolio</title>
 </head>
 
 <body>
