Updated img alt text

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <div class="socialmedia_icons">
             <ul class="icons">
                 <li>
-                    <a href="#"><img src="./img/svg/github.svg" alt="" /></a>
+                    <a href="#"><img src="./img/svg/github.svg" alt="Github logo" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./img/svg/linkedin.svg" alt="" /></a>
+                    <a href="#"><img src="./img/svg/linkedin.svg" alt="LinkedIn logo" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./img/svg/peace.svg" alt="" /></a>
+                    <a href="#"><img src="./img/svg/peace.svg" alt="Hand Peace logo" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./img/svg/twitter.svg" alt="" /></a>
+                    <a href="#"><img src="./img/svg/twitter.svg" alt="Twitter logo" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="./img/svg/M.svg" alt="" /></a>
+                    <a href="#"><img src="./img/svg/M.svg" alt="Letter M logo" /></a>
                 </li>
             </ul>
         </div>
