--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
         <nav class="nav_container">
             <a href="#" class="nav_logo">Luca Benavente</a>
             <ul class="nav_links_container">
-                <li><a href="#" class="nav_link">Portfolio</a></li>
-                <li><a href="#" class="nav_link">About</a></li>
-                <li><a href="#" class="nav_link">Contact</a></li>
+                <li><a href="#portfolio" class="nav_link">Portfolio</a></li>
+                <li><a href="#about" class="nav_link">About</a></li>
+                <li><a href="#contact" class="nav_link">Contact</a></li>
                 <li>
                     <a href="#" class="envelope_logo nav_link"><i class="fa-solid fa-envelope"></i></a>
                 </li>
             </ul>
-            <a href="#" class="toggle_btn"><i class="fa fa-bars"></i></a>
+            <button class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </nav>
     </header>
     <section class="intro_container">
@@ -59,7 +63,7 @@
             </p>
         </div>
     </section>
-    <section class="mrw_line">
+    <section id="portfolio" class="mrw_line">
         <h4>My Recent Works</h4>
         <div class="line">
             <hr />
@@ -201,7 +205,7 @@
             </div>
         </div>
     </section>
-    <section class="about_me_container">
+    <section id="about" class="about_me_container">
         <div class="mps_text">
             <h4>About me</h4>
             <p>
@@ -257,7 +261,7 @@
             </ul>
         </div>
     </section>
-    <section class="form_section">
+    <section id="contact" class="form_section">
         <div class="form_text">
             <h2>
                 I'm always interested in hearing about new projects, so if you'd like
@@ -301,6 +305,8 @@
         </ul>
         <div class="last_line"></div>
     </footer>
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
